# OpenComputeFramework

./: .gitignore  CITATIONS.cff  CLAUDE.md  Dockerfile.amd64  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
apps/proxy/: .dockerignore  .env.example  Dockerfile  README.md  main.py  requirements.txt  test_implementation.py
apps/proxy/proxy/: auth.py  database.py  main.py  middleware.py  models.py  models_api.py  routers.py  utils.py
apps/proxy/scripts/: build_docker.sh  run_backend.sh
apps/proxy/tests/: test_api.py
apps/proxy/tools/: create_tables.py
apps/web/: README-CONSOLE.md  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: animated-globe.tsx  code-example.tsx  dashboard.tsx  faq.tsx  features.tsx  footer.tsx  hero.tsx  testimonial.tsx  theme-toggle.tsx  wallet-connect.tsx
apps/web/lib/: config.ts  database.ts  web3-provider.tsx
apps/web/public/: site.webmanifest
docker/dispatcher/: Dockerfile
docs/: astro.config.mjs  mkdocs.yml  package-lock.json  package.json  requirements.txt  zensical.toml
docs/docs/: api.md  configuration.md  index.md  installation.md  started.md  usage.md
docs/docs/advanced/: internals.md
docs/docs/backend/: api.md  architecture.md  configuration.md  index.md
docs/docs/blockchain/: contracts.md  index.md  tokenomics.md
docs/docs/development/: contributing.md  setup.md
docs/docs/guide/: inference.md  (+1 more)
docs/tests/: inferencia.py  triteia.py
examples/apis/: .gitignore  conn.py  inference.py  inference_devnet.py  inference_example.py  sd_inference_example.py
examples/worker/: _base.py  inference.py  opt.py  utils.py
libs/python/: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  setup.cfg  setup.py
local-demo/: docker-compose.yml
local-demo/env/: id.dispatcher  id.llm
local-demo/mocked-openai-api/: requirements.txt
meta/: Dockerfile.amd64  build_core_docker.sh
src/: .golangci.yml  Makefile  go.mod  go.sum
src/benchmark/: inference.js
src/entry/: main.go
src/examples/: dnt.py  forward.py
src/ocf-cli/: .gitignore  Makefile  pyproject.toml  setup.py
src/ocf-cli/ocf_cli/lib/core/: config.py  host_worker.py  inference_worker.py  utils.py
src/ocf-cli/ocf_cli/lib/pod/: config.py  manager.py  pod.py  utils.py
src/ocf-cli/ocf_cli/lib/pprint/: nodes.py  service.py
src/ocf-core/: Dockerfile  Makefile  fly.toml  go.mod  go.sum
src/ocf-ui/: components.json  next.config.js  package-lock.json  package.json
src/rccore/: Dockerfile  Makefile  go.mod  go.sum
src/scripts/: bootstrap.service
src/sdks/py-ocf-worker/: Makefile  pyproject.toml
src/sdks/py-ocf-worker/client/: __init__.py
tokens/: Anchor.toml
tokens/programs/tokens/: Cargo.toml
tokens/programs/tokens/src/: lib.rs
tokens/tests/: anchor.test.rs  tokens.ts
tools/: establish_connection.py
(+236 files in other folders)
