[package]
name = "tokens"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokens"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-spl = { version = "0.31.1", features = ["metadata"] }
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }